# to

./: Cargo.toml  IDEAS.md  Makefile  README.md  build.rs  configure  full-template  template  version.sh
envs/: base.env  c99.env  cmake.env  cn.env  go.env  meson.env  mn.env  ninja.env  p.env  pip.env  rust.env  samu.env
etc/: config.toml  exclude
git-templates/: add-package  alias-package  bump-package  delete-package  edit-package  remove-package  update-package
scripts/: add-package  alias-package  bump-package  delete-package  edit-package  gen.sh  runner.sh
scripts/maintainer/: add-package  bump-package  delete-package  edit-package  gen.sh
scripts/opts/: la.opt  run  strip.opt
scripts/qa/: artifactsymlinks.qa  bindirs.qa  brokensymlinks.qa  doubledestdir.qa  emptydestdir.qa  la.qa  pc.qa  qa.sh  run  static.qa  usrlocal.qa
src/: config.rs  main.rs
src/cli/: add.rs  alias.rs  build.rs  bump.rs  data.rs  delete.rs  edit.rs  generate.rs  health.rs  install.rs  lint.rs  mod.rs  prune.rs  pull.rs  push.rs  remove.rs  serve.rs  sync.rs  vf.rs  view.rs
src/package/: actions.rs  alias.rs  build.rs  dep.rs  generate.rs  helpers.rs  install.rs  lint.rs  message.rs  mod.rs  prune.rs  pull.rs  remove.rs  source.rs  vf.rs  view.rs
src/server/: core.rs  endpoints.rs
src/structs/: cli.rs  config.rs
src/utils/: commit_hash.rs  debug.rs  err.rs  exec.rs  file.rs  health.rs  log.rs  mod.rs  parse.rs
