[package]
name = "to"
authors = [ "Toxikuu" ]
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
clap = { version = "4.5", features = ["derive"] }
dircpy = "0.3"
fshelpers = { git = "https://github.com/toxikuu/fshelpers.git" }
futures = "0.3"
indicatif = "0.17.11"
mime_guess = "2.0"
num_cpus = "1.16.0"
once_cell = "1.21.3"
permitit = "0.1"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
which = "7.0.3"
